crates/aranya-policy-compiler/tests/data/match_stmt/alternation_duplicate_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: duplicate match patterns found
   |
14 |         5 | 6 => {
   |         - first defined here
...
17 |         1 | 5 | 3  => {
   |             ^ duplicate pattern
